--- a/girls-volleyball.html
+++ b/girls-volleyball.html
@@ -102,16 +102,52 @@
   <div class="container">
     <h1>MS Girls Volleyball</h1>
     <h2 class="author">By [AUTHORS]</h2>
-    <img src="https://dummyimage.com/700x400/343bb0/ffffff.png&text=Placeholder" alt="[Optional Caption Text]">
+    <img src="https://lh3.google.com/u/0/d/17BfSWUu5SZco9CId1v5gNUl5kwnE2EvU=w3270-h1824-iv1?auditContext=thumbnail&auditContext=forDisplay" alt="[Optional Caption Text]">
     <p>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat commodo ante, sed euismod ex malesuada ut. Sed lacinia mi in quam commodo tempus. Vestibulum consequat mollis tellus, id vulputate tortor fringilla vitae. Aliquam mattis lacus mauris, vitae ultrices lacus varius quis. Cras a iaculis nisl. Etiam a placerat metus. Aliquam erat volutpat. Donec tincidunt elit vitae ante pretium, nec feugiat magna imperdiet. Nam varius eros quis ante tempor sagittis. Suspendisse fringilla nunc ac nisi egestas, id pretium dolor consectetur. Vivamus dictum erat dolor, gravida vulputate lorem accumsan non. Vivamus aliquam pellentesque neque non feugiat. Ut ne
-    </p>
-    <p>
-   Quisque id est bibendum, condimentum leo sit amet, sodales ligula. Nullam semper non lectus sit amet ultrices. Vestibulum vel sapien quis nulla ornare consequat in at nibh. Suspendisse volutpat semper dolor in venenatis. Aliquam facilisis pulvinar tortor eget tincidunt. Pellentesque augue metus, scelerisque a tincidunt sodales, tristique fermentum massa. Sed a ligula non nunc dictum vulputate. Cras vitae enim interdum, finibus nulla nec, euismod lacus. Proin pulvinar quis magna sed fermentum. Suspendisse eros tellus, convallis vel scelerisque ut, eleifend nec nibh. Phasellus tristique pulvinar facilisis. Cras maximus non ligula ut placerat. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin tincidunt leo ac neque tempor, dignissim ullamcorper orci ullamcorper.
+I can confidently say that when signing up for sports, we all saw different sports. And one of the sports that was listed for the girls in the fall was volleyball. Now, some of us may have seen it and then saw soccer, and we were like, “Soccer over volleyball? MS, what is this question? Soccer, duh.” But volleyball is such a great sport so it deserves its own article. When you think of sports, I think we can all agree that volleyball isn’t the first sport that comes to mind. But it deserves more recognition, because it should be recognized more. 
+
+In case you are wondering how the game works, here’s a rundown of the game. In every game, two teams go against each other with six players on the court. There are four sets, each going up to 25 points. There are three moves you can make in Volleyball, not including serving. There is the bump, which is exactly what it sounds like. A bump is an action where you hit the ball up with your forearms. There is the set, where you put your hands above your head and hit the ball up with your fingertips. Finally, there is the tap. The tap is where if you are close enough to the net you can hit the ball over with one or two hands. 
+
+We interviewed all the volleyball coaches about our MS volleyball, and this is what they said:
     </p>
     <hr>
     <p>
-    Nullam euismod orci eget lobortis sagittis. Cras cursus mauris quis urna malesuada porttitor. Proin magna libero, porta in augue vitae, venenatis porta nibh. Quisque facilisis sed orci eu commodo. Aliquam vestibulum accumsan porta. Etiam rutrum luctus porta. Aenean non vulputate dolor. Aliquam pretium ligula enim, sit amet vulputate nisi blandit eget. Aliquam scelerisque auctor nulla non rhoncus. Nam iaculis orci in arcu bibendum ullamcorper. Duis sit amet sagittis urna, id ultricies mauris. In vel justo eu ligula commodo dapibus. In hac habitasse platea dictumst. Nulla facilisi. Ut id massa pulvinar, sagittis nibh eget, dapibus arcu. Maecenas in venenatis quam.
+Q: What do you think was the highlight of the season?
+
+Coach Cerenzia: “I think the highlight of the season was the number of students who were interested in playing volleyball, with this being only our second year of volleyball.”
+Coach Selfridge: “I think the highlight of the season was celebrating with each other when both teams had their first win. I think that was one of my favorites.”
+Coach Canavan: “I think the highlight of the season was seeing the improvement of all the players that had never played before and the improvement they made in their skills and confidence.”
+
+Q: What do you think is the biggest challenge MS volleyball has gone through this season
+
+Coach Cerenzia: “The variety of skill levels that we have, and with that variety, still making sure that it’s a rewarding experience for everyone.”
+Sel: “Learning how to play together as a brand new team since we had a lot of girls who had never played before.”
+Can: “I think the biggest challenge has been time only because I wish we had more of it.”
+Poh: “I think our biggest challenge is keeping our spirits up and knowing the opportunity to turn it around if we work together as a team.”
+
+Q: Was there a point in any game where the players were behind and they made a comeback point-wise or attitude-wise?
+
+Cer: “Yes, we experience that in most matches, especially on the A team, when somebody has a great hit or a perfect serve, it’s an ace, and it really changes the momentum of the game.”
+Sel: “I think definitely. We had a couple of  situations like that where we were down point-wise or attitude-wise wise and in between sets we talked to each other and we helped each other boost our mood and boost our confidence.”
+Can: Yes, when we played Germantown Academy for the first time, we were in a 12-point hole, and we came back and pushed it to 3 sets, and that very next day, we won. I think that showed us our confidence and our abilities, and because of that, the next day we got our very first win.”
+Poh: “That happened the first time we played Germantown Academy. We lost the first set, but we came back and worked as a team. We were really able to call the ball, and we were able to come back and win the second set, and then that was the first time we had won the second set, so that was the first time we got to play a 3rd set. We learned in that game that we could dig ourselves out of a hole if we work together.”
+
+
+
+Q: Do you think that our MS volleyball is amazing? Why is it the best volleyball team in the Inter-AC?
+
+Cer: ”Of course, I think our team in the Inter AC, and I know we’re the best team in the Inter AC because we show up with an attitude ready to show up and prove everyone wrong. People might take us for granted because we’re new, but that’s not the case when we actually play the game.” 
+Sel: “I think the reason we are such an awesome team is because we have so many people who have a love for volleyball, whether it’s new or old.” 
+Can: “Yes, I think we are amazing and I think we are the best because the enthusiasm and dedication we show every day translate into our success working as a team.”
+Poh: “Yes I think we have a very strong team our team is still so new since this is only our second season and it’s amazing to see the growth in every single one of our players especially since a lot of them had never tried volleyball before they joined our team and so I think our program is going to get stronger and stronger with each new season.”
+
+    </p>
+    <p>
+Everyone thinks the MS thinks Volleyball is a good addition to the fall sports resume. According to Mr. Goens, “It's a wonderful opportunity for kids who want to have experience, and it’s great that we have a team. I mean, we’re growing and we’re learning”.
+
+Volleyball is a sport where the environment is super positive, and it makes you want to try your best! In our team, we have so many different players, but we all blend perfectly and create a great team! 
+In conclusion, volleyball is a sport where “everyone is respectful and kind to each other,” according to Victoria Dermengian (‘32). 
+
     </p>
     <p style="text-align: center;">
       <a href="home-page.html">← Back to Home</a>
