--- a/ms-singers.html
+++ b/ms-singers.html
@@ -101,17 +101,46 @@
 <body>
   <div class="container">
     <h1>MS Singers</h1>
-    <h2 class="author">By [AUTHORS]</h2>
-    <img src="https://dummyimage.com/700x400/343bb0/ffffff.png&text=Placeholder" alt="[Optional Caption Text]">
+    <h2 class="author">By Florrie ('32), and Grace ('32)</h2>
     <p>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat commodo ante, sed euismod ex malesuada ut. Sed lacinia mi in quam commodo tempus. Vestibulum consequat mollis tellus, id vulputate tortor fringilla vitae. Aliquam mattis lacus mauris, vitae ultrices lacus varius quis. Cras a iaculis nisl. Etiam a placerat metus. Aliquam erat volutpat. Donec tincidunt elit vitae ante pretium, nec feugiat magna imperdiet. Nam varius eros quis ante tempor sagittis. Suspendisse fringilla nunc ac nisi egestas, id pretium dolor consectetur. Vivamus dictum erat dolor, gravida vulputate lorem accumsan non. Vivamus aliquam pellentesque neque non feugiat. Ut ne
+Middle School Singers (MS singers) is an amazing chance to learn, connect, and have fun if you enjoy singing, performing, or just want to try something new! Here you can learn about MS singers and what they do.
+The first step to joining MS singers is to sign up for an audition spot and confirm with Ms. Hardison. Then, on the day of the audition, arrive a bit early and get ready to sing. Then you will be called in to sing some warm-ups, and Ms Hardison will find out if you are an alto (lower voice) or a soprano (higher voice). CONGRATULATIONS! You now part of Middle School Singers! 
+One of the songs that the MS singers will be singing this year is ‘Northern Lights’ which is about the beauty of the phenomenon aurora borealis. The song will take you on a journey to the North Pole, where you can see ‘lights flicker, lights flash’ in delightful arrays of color and light. Another song that the Middle School Singers will be singing is ‘The Beauty of the Earth’. This song is about how we can enjoy our world and all the beautiful things we can find in it.
+All of the Middle School Singers meet on day 5 and 8 during flex to practice their songs in the chorus room. Rehearsal kicks off with some vocal warm-ups and transitions to learning/singing the songs.
+Some opportunities offered within Middle School Singers are travelling to Hershey Park to perform and compete, meeting special guests that come in, singing in chapel and in school concerts, and performing during school events like the Christmas tree lighting. 
     </p>
     <p>
-   Quisque id est bibendum, condimentum leo sit amet, sodales ligula. Nullam semper non lectus sit amet ultrices. Vestibulum vel sapien quis nulla ornare consequat in at nibh. Suspendisse volutpat semper dolor in venenatis. Aliquam facilisis pulvinar tortor eget tincidunt. Pellentesque augue metus, scelerisque a tincidunt sodales, tristique fermentum massa. Sed a ligula non nunc dictum vulputate. Cras vitae enim interdum, finibus nulla nec, euismod lacus. Proin pulvinar quis magna sed fermentum. Suspendisse eros tellus, convallis vel scelerisque ut, eleifend nec nibh. Phasellus tristique pulvinar facilisis. Cras maximus non ligula ut placerat. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin tincidunt leo ac neque tempor, dignissim ullamcorper orci ullamcorper.
+<strong>Meet Mrs. Hardison:</strong>
     </p>
-    <hr>
+<p>
+  Q: What is your favorite MS singer's memory?
+A: "My Favorite memory is the performance we did at Saint Francis Chapel."
+
+Q: What do you do behind the scenes for MS singers?
+A: "I select music, coordinate performances, set up auditions, connect students with joining the group, and coordinate workshops with professionals."
+
+Q: What inspires your choice of music for MS singers?
+A: "I try to pick music that is more artistic and also enjoyable to listen to and perform. I also like to pick music with more complex harmonies or requirements for the amazing singers who I know will focus during meetings and sing it beautifully."
+
+    </p>
     <p>
-    Nullam euismod orci eget lobortis sagittis. Cras cursus mauris quis urna malesuada porttitor. Proin magna libero, porta in augue vitae, venenatis porta nibh. Quisque facilisis sed orci eu commodo. Aliquam vestibulum accumsan porta. Etiam rutrum luctus porta. Aenean non vulputate dolor. Aliquam pretium ligula enim, sit amet vulputate nisi blandit eget. Aliquam scelerisque auctor nulla non rhoncus. Nam iaculis orci in arcu bibendum ullamcorper. Duis sit amet sagittis urna, id ultricies mauris. In vel justo eu ligula commodo dapibus. In hac habitasse platea dictumst. Nulla facilisi. Ut id massa pulvinar, sagittis nibh eget, dapibus arcu. Maecenas in venenatis quam.
+      <strong>Meet a Middle School Singer:</strong>
+    </p>
+    <p>
+      Q: What are your favorite parts of MS singers?
+A: “I love being able to sing with my friends.”
+
+Q: What have you learned in MS singers
+A: "It has strengthened my ability to work in a team."
+
+Q: How have you grown as a singer since you joined?
+A: "I’ve explored my vocal range. I’m normally alto, but Middle School Singers has given me a chance to try soprano parts."
+
+Q: Have you made new connections with people you don’t usually hang out with through MS singers
+A: "Yes, I like meeting people from other grades and forming new friendships."
+    </p>
+    <p>
+      In conclusion, Middle School Singers is a great opportunity to make new friends, learn responsibility and collaboration, along with developing confidence in your abilities. Whether you have done a lot of singing in the past or not, MS Singers is a great place for everyone who loves to sing!
     </p>
     <p style="text-align: center;">
       <a href="home-page.html">← Back to Home</a>
