--- a/haverfordais-day.html
+++ b/haverfordais-day.html
@@ -101,7 +101,7 @@
 <body>
   <div class="container">
     <h1>Feeling Cold? ...It’s a good thing we got the swEAter!!</h1>
-    <h2 class="author">By [AUTHORS]</h2>
+    <h2 class="author">By Ava ('32), Asha ('32)</h2>
     <img src="https://lh3.google.com/u/0/d/1s_Dk-CzfmGG9wznHgzBBOU1a8eck7VCw=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="[Optional Caption Text]">
     <h2>
    A Note of Inspiration
