Update costume-contest.html -- FINISHED
Added all parts needed.

--- a/costume-contest.html
+++ b/costume-contest.html
@@ -102,24 +102,27 @@
   <div class="container">
     <h1>Halloween Costume Contest</h1>
     <h2 class="author">By Sara Adibi ('31) and Lindsay Ferry ('31)</h2>
-    <img src="https://dummyimage.com/700x400/343bb0/ffffff.png&text=Placeholder" alt="[Optional Caption Text]">
+    <img src="https://lh3.google.com/u/0/d/1S3iAkyLQCYpQRqng39JBY0BwEadC427y=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="[Optional Caption Text]">
     <p>
-   Ghosts, pumpkins, tricks, treats, and, especially, costumes! It’s finally October, the time of the year for piling leaves and carving jack-o’-lanterns. But the real star of October is Halloween! As Halloween approaches, people have been scouring the internet for sparkly, spooky, scary, silly, and unique costumes! But who will have the best costume?
+Ghosts, pumpkins, tricks, treats, and, especially, costumes! It’s finally October, the time of the year for piling leaves and carving jack-o’-lanterns. But the real star of October is Halloween! As Halloween approaches, people have been scouring the internet for sparkly, spooky, scary, silly, and unique costumes! But who will have the best costume?
     </p>
     <p>
-   This year, the Middle School Halloween Costume Contest was truly a success! The preceding downpour wasn’t part of the initial plan, yet it only set up the event for the better. The rain and the clouds painted the perfect horror-Halloween picture. With over 25 contestants, the competition was fierce. Participants brought new creativity and personality to the contest, making the event even more entertaining. The music and the makeshift runway were the perfect stage, invoking the crowd to go wild.
+This year, the Middle School Halloween Costume Contest was truly a success! The preceding downpour wasn’t part of the initial plan, but it only set the stage for even more fun. The rain and the clouds painted the perfect horror-Halloween picture. With over 25 contestants, the competition was fierce. Participants brought new creativity and personality to the contest, making the event even more entertaining. The music and the makeshift runway were the perfect stage, invoking the crowd to go wild.
 There was a wide variety of costumes, ranging from scary to silly, each one being better than the one before. This year’s winner of the silliest costume was 7th grader Alex Lo as a Microwave Lawyer. Alex’s inspiration for this costume was his profile picture on his computer. He also said that he wanted to create an extremely funny costume. He stated that he dressed up in this costume as a joke. 
     </p>
+    <img src="https://lh3.google.com/u/0/d/1C3YbyFN2XItqmou6XbbMFTISnBG1jt0L=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="Caption">
     <p>
-    For the most creative, there was no shortage of clever costumes. Each costume offered its own ingenuity, bringing loud cheers from the audience. Costumes ranged from Elsa to Elphaba, but our overall winner was Harry Rheam from 7th grade. Harry was dressed up as the tiger Derpy from the film KPop Demon Hunters—his costume made from scratch and heart. His friends decided to be the iconic Saja Boys who star in the same film.
+For the most creative, there was no shortage of clever costumes. Each costume offered its own ingenuity, bringing loud cheers from the audience. Costumes ranged from Elsa to Elphaba, but our overall winner was Harry Rheam from 7th grade. Harry was dressed up as the tiger Derpy from the film KPop Demon Hunters—his costume made from scratch and heart. His friends decided to be the iconic Saja Boys who star in the same film.
     </p>
+    <img src="https://lh3.google.com/u/0/d/1A-C3Q3aIenFiL90GCM69bfwmL2uKeGrG=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="Caption">
     <p>
-    For the most Halloween-themed costume or the scariest. At first, everyone was rocked with fear as a spooky witch doctor walked by. This contestant truly picked an outfit that would scare the audience. This only brought more cheers from the audience. Ben Shane, the mastermind of this costume, had selected this costume intending to be the best one there. He had known about mysterious doctors and intended to make them come to life for this contest—and he did just that as he grabbed the attention of all the judges and won.
+For the most Halloween-themed costume or the scariest. At first, everyone was rocked with fear as a spooky witch doctor walked by. This contestant truly picked an outfit that would scare the audience. This only brought more cheers from the audience. Ben Shane, the mastermind of this costume, had selected this costume intending to be the best one there. He had known about mysterious doctors and intended to make them come to life for this contest—and he did just that as he grabbed the attention of all the judges and won.
 The participation from the crowd would not go unawarded, which brings you to the final section of the contest: Fan Favorite. The cheers could be heard from the Science Hall as the audience shouted for their favorite costumes. Eventually, after 26 competitors stepped in front of the crowd, we had our top 3: a Scarecrow, a Labubu, and The Lorax. The race was close, but the eventual winner was Arden Cha as a Labubu. Arden said that her costume idea came from her desire to dress up as something preppy, which she successfully did with first place in fan favorite!
     </p>
+      <img src="https://lh3.google.com/u/0/d/1z56q-sDHIBO3xYf3YCSqwt2G4DL8mShm=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="">
     <hr>
     <p>
-      In the end, the Halloween Costume Contest was the best opportunity to celebrate the creativity of those who dressed up. Be sure to dress up next year, and Happy Halloween!
+In the end, the Halloween Costume Contest was the best opportunity to celebrate the creativity of those who dressed up. Be sure to dress up next year, and Happy Halloween!
     </p>
     <p style="text-align: center;">
       <a href="home-page.html">← Back to Home</a>
