Update crossword.html -- NEEDS CROSSWORD IMG

--- a/crossword.html
+++ b/crossword.html
@@ -1,2 +1,8 @@
+<!DOCTYPE html>
 <head></head>
-<body><p>Crossword/Word search - WIP</p></body>
+<body>
+  
+  <p>Nothing here but us pigeons...</p>
+  <p>An error has occurred while loading this page. Check http://github.com/TheEd31/in-the-middle to check the repository status.</p>
+
+</body>
