Update girls-tennis.html -- NOT FINISHED

--- a/girls-tennis.html
+++ b/girls-tennis.html
@@ -109,7 +109,7 @@ The coaches for tennis have devoted their time to helping us succeed. The coache
     </p>
         <hr>
 <h2>
-  Q&A with an MS Girls Tennis Coach || <strong>(Who did you interview??? Multiple coaches/players??)</strong>
+  【 Q&A with an MS Girls Tennis Coach 】
     </h2>
     <p>
 Q. What is your favorite thing about coaching tennis
