--- a/home-page.html
+++ b/home-page.html
@@ -277,16 +277,6 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/spirit-week?authuser=1" target="_blank" class="article-title">Spirit Week</a></strong></u>
-                <span class="tooltiptext">A week of different-themed dressdown days! Authors: <i>Liv, Alana, Peyton, Sara</i></span>
-            </span>
-        </li>
-                        <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/harvest-day?authuser=1" target="_blank" class="article-title">Harvest Day</a></strong></u>
-                <span class="tooltiptext">An LS tradition with games, prizes, and all-around fun! Authors: <i>Remy, Everly, Annie, Katie</i></span>
-            </span>
-        </li>
-                        <li>
             <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/washington-d-c-trip?authuser=1" target="_blank" class="article-title">8th Grade Washington D.C. Trip</a></strong></u>
                 <span class="tooltiptext">All about the Washington D.C. Trip! Authors: <i>Adam, Leo, Zach, Ellen</i></span>
             </span>
@@ -322,11 +312,6 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="mb-4">The <strong>Fun & Games</strong> section is where all of the games made by our staff go! This may include word searches, crosswords, fun facts, and more! In addition, polls from the EA community will be paced here. Does everyone agree?</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
-                        <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/fall-polls?authuser=1" target="_blank" class="article-title">Fall Polls - Favorite Lunch, Snack, Trends, and Class!</a></u></strong>
-                <span class="tooltiptext">A mix of polls on the Middle School! Authors: <i>Various (A lot!)</i></span>
-            </span>
-        </li>
                         <li>
             <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/fall-polls?authuser=1" target="_blank" class="article-title">Crossword/Wordsearch and other Puzzles</a></u></strong>
                 <span class="tooltiptext">Various puzzles created by our staff! Made by: <i>Sunishka</i></span>
@@ -366,13 +351,8 @@ document.body.addEventListener('pointerleave', (e) => {
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/girls-soccer?authuser=1" target="_blank" class="article-title">Girls Soccer (Team Spotlight)</a></u></strong>
-                <span class="tooltiptext">Everything there is to know about the Girls Soccer team! Authors: <i>Everly, Annie, Katie, Izzy</i></span>
-            </span>
-        </li>
-                        <li>
             <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/aishaverford-day?authuser=1" target="_blank" class="article-title">AIS/Haverford Day</a></u></strong>
-                <span class="tooltiptext">Everything there is to know about the Girls Soccer team! Authors: <i>Ava, Asha</i></span>
+                <span class="tooltiptext">A full rundown about the events of AIS/Haveford Day and Weekend! (Spoiler: we won!) Authors: <i>Asha, Sara</i></span>
             </span>
         </li>
                     </ul>
