Update puzzles.html -- FINISHED
-- Updated link for home page

-- Checks complete, all works

--- a/puzzles.html
+++ b/puzzles.html
@@ -230,7 +230,7 @@
   </div>
 
   <div style="margin-top:18px; text-align:center; color:#0d47a1;">
-    <a href="home-page.html" style="color:var(--mid-blue); text-decoration:none; font-family:'Merriweather', serif;">← Back to Home</a>
+    <a href="sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/in-the-middle?authuser=1" style="color:var(--mid-blue); text-decoration:none; font-family:'Merriweather', serif;">← Back to Home</a>
   </div>
 </div>
 
