--- a/home-page.html
+++ b/home-page.html
@@ -326,15 +326,11 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/fall-polls?authuser=1" target="_blank" class="article-title">Crossword/Wordsearch and other Puzzles</a></u></strong>
-                <span class="tooltiptext">Various puzzles created by our staff! Made by: <i>Sunishka</i></span>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/puzzles?authuser=1" target="_blank" class="article-title">Crossword/Wordsearch and other Puzzles</a></u></strong>
+                <span class="tooltiptext">Various puzzles created by our staff!</span>
             </span>
         </li>
-                        <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/halloween?authuser=1" target="_blank" class="article-title">Halloween</a></u></strong>
-                <span class="tooltiptext">Tricks, treats, and costumes! Authors: <i>Remy, Izzy, Katie, Everly</i></span>
-            </span>
-        </li>
+
                     </ul>
                 `,
                 author: ""
@@ -410,7 +406,7 @@ document.body.addEventListener('pointerleave', (e) => {
                 title: "Join the Staff!",
                 description: "Are you interested in writing, photography, or editing? See how you can get involved!",
                 category: "Opportunity",
-                image: "https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg",
+                image: "https://lh3.google.com/u/0/d/1bAAGdIUtb2HOgB4aGTowr2uViNXWU2g5=w3270-h1824-iv1?auditContext=thumbnail&auditContext=forDisplay",
                 content: `
                     <p class="text-lg font-bold text-navy mb-4">Are you interested in being on the Newspaper staff?</p>
                     <p class="mb-6">We are still looking for dedicated <span class="font-bold">writing staff and photographers</span> to help us cover all the exciting news around the school!</p>
