--- a/home-page.html
+++ b/home-page.html
@@ -379,7 +379,7 @@ document.body.addEventListener('pointerleave', (e) => {
                     <ul class="list-disc pl-5 space-y-1">
                        <li>
             <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/newsies?authuser=1" target="_blank" class="article-title">Newsies - The Fall Musical</a></u></strong>
-                <span class="tooltiptext">The MS Fall Musical; here's what you need to know! Authors: <i>Remy, Ellie</i></span>
+                <span class="tooltiptext">The MS Fall Musical; here's what you need to know! Authors: <i>Eleanor</i></span>
             </span>
         </li>
                         <li>
