--- a/newsies.html
+++ b/newsies.html
@@ -101,20 +101,32 @@
 <body>
   <div class="container">
     <h1>Newsies Jr. - Fall Musical</h1>
-    <h2 class="author">By [AUTHORS]</h2>
-    <img src="https://dummyimage.com/700x400/343bb0/ffffff.png&text=Placeholder" alt="[Optional Caption Text]">
+    <h2 class="author">By Eleanor</h2>
     <p>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat commodo ante, sed euismod ex malesuada ut. Sed lacinia mi in quam commodo tempus. Vestibulum consequat mollis tellus, id vulputate tortor fringilla vitae. Aliquam mattis lacus mauris, vitae ultrices lacus varius quis. Cras a iaculis nisl. Etiam a placerat metus. Aliquam erat volutpat. Donec tincidunt elit vitae ante pretium, nec feugiat magna imperdiet. Nam varius eros quis ante tempor sagittis. Suspendisse fringilla nunc ac nisi egestas, id pretium dolor consectetur. Vivamus dictum erat dolor, gravida vulputate lorem accumsan non. Vivamus aliquam pellentesque neque non feugiat. Ut ne
+  It’s no secret that the 2025 MS musical is Newsies, but what really is Newsies? What happens behind the scenes? Here is all the information behind what Newsies is, what happens behind the scenes, and what the MS thinks about it.
+
+Newsies is a movie-turned-musical based on the 1899 paper boy strike in New York. The original movie was released in 1992, and the story became a musical in 2011. This year's musical features the main cast of Riley Romanzcuk, Ella Diaz, Katie Esterhai, Henry Goens, and Lander Snyder. On October 5, the cast of Newsies had a very special workshop with former Broadway Newsie Jess LeProtto! The Newsies cast learned a bit of original Broadway choreography and had a Q&A with him. A special shoutout to Jess for coming and giving us some Newsie magic!
+
+Ms. Tomkowich, the musical director, provided some more information on this year’s production in a short Q&A:
+
     </p>
     <p>
-   Quisque id est bibendum, condimentum leo sit amet, sodales ligula. Nullam semper non lectus sit amet ultrices. Vestibulum vel sapien quis nulla ornare consequat in at nibh. Suspendisse volutpat semper dolor in venenatis. Aliquam facilisis pulvinar tortor eget tincidunt. Pellentesque augue metus, scelerisque a tincidunt sodales, tristique fermentum massa. Sed a ligula non nunc dictum vulputate. Cras vitae enim interdum, finibus nulla nec, euismod lacus. Proin pulvinar quis magna sed fermentum. Suspendisse eros tellus, convallis vel scelerisque ut, eleifend nec nibh. Phasellus tristique pulvinar facilisis. Cras maximus non ligula ut placerat. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin tincidunt leo ac neque tempor, dignissim ullamcorper orci ullamcorper.
-    </p>
-    <hr>
-    <p>
-    Nullam euismod orci eget lobortis sagittis. Cras cursus mauris quis urna malesuada porttitor. Proin magna libero, porta in augue vitae, venenatis porta nibh. Quisque facilisis sed orci eu commodo. Aliquam vestibulum accumsan porta. Etiam rutrum luctus porta. Aenean non vulputate dolor. Aliquam pretium ligula enim, sit amet vulputate nisi blandit eget. Aliquam scelerisque auctor nulla non rhoncus. Nam iaculis orci in arcu bibendum ullamcorper. Duis sit amet sagittis urna, id ultricies mauris. In vel justo eu ligula commodo dapibus. In hac habitasse platea dictumst. Nulla facilisi. Ut id massa pulvinar, sagittis nibh eget, dapibus arcu. Maecenas in venenatis quam.
+Q: What inspired you to choose Newsies for the MS musical this year? 
+A: “It’s something that I’ve always really loved, and I thought about how many dancers we have and I thought Newsies, yeah!”
+
+Q: Are you excited to see our MS cast perform Newsies? 
+A: “Yeah. I’m excited to see the passion come out. When Jess LeProtto was working with you all, it reminded you guys of how unified the newsies were during the strike, and I'm excited for you guys to know the choreo and the words and to have fun and act with it.”
+
+Q: What was going through your head during the Jess LeProtto workshop? 
+A: “I was thinking about how he is so dedicated to the discipline and the work that his job has to do, and here at EA we do it for fun, but he’s always working on it, so I was thinking wow, and I thought it was good and that he could talk about it with so much passion, but he also has to work so hard.” 
+
+Q: And finally, do you think the MS is going to love Newsies? 
+A: “Yeah. I think that it’s about kids, and it’s always fun to see kids your age, and the newsies are a very rambunctious group, so I think it will be fun for the MS to see that. It’s also about kids finding their voices, so I think it will be inspiring for the MS.” 
+
+Everyone is excited for Newsies. From the performers to the crew, every aspect is amazing, and the whole Middle School can’t wait to see what the performance will be like! There will be an in-school performance on Thursday, 11/20, and additional performances on 11/21 and 11/22. See you there!
     </p>
     <p style="text-align: center;">
-      <a href="home-page.html">← Back to Home</a>
+      <a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/in-the-middle?authuser=0">← Back to Home</a>
     </p>
   </div>
 </body>
