Updated external link to ARCHIVE - fin?
idk

--- a/home-page.html
+++ b/home-page.html
@@ -438,7 +438,7 @@ document.body.addEventListener('pointerleave', (e) => {
         </p>
 
         <a 
-            href="/archive" 
+            href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/in-the-middle/archive" 
             class="text-light-blue underline font-semibold hover:text-navy"
         >
             Go to the full archive →
