Closing tag fix
Should fix visual bug

--- a/archive.html
+++ b/archive.html
@@ -87,7 +87,7 @@
     <a class="card" href="example.com" target="_blank">
       <img src="example.com/temp-image.jpg" alt="">
       <div class="card-title">Haverford/AIS Day</div>
-      <div class="card-desc">A full rundown about the events of AIS/Haverford Day and Weekend! (FALL 2025)/div>
+      <div class="card-desc">A full rundown about the events of AIS/Haverford Day and Weekend! (FALL 2025)</div>
     </a>
 
     <!-- Copy + edit this structure for each article -->
