Update archive.html with Fall 2025 issue details
ħħħħħħħħħħħħħħħħħħħ

--- a/archive.html
+++ b/archive.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Archive</title>
-
+<h2>{WIP)</h2>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
@@ -51,10 +51,10 @@
                      class="w-full h-56 object-cover">
 
                 <div class="p-6">
-                    <h2 class="text-2xl font-bold text-navy mb-1">Issue Title (Month Year)</h2>
-                    <p class="text-gray-600 mb-4">Short description of this issue goes here.</p>
+                    <h2 class="text-2xl font-bold text-navy mb-1">Fall 2025 Issue (11/2025)</h2>
+                    <p class="text-gray-600 mb-4">Fall Edition (1st Issue) of ITM in the 25-26 year.</p>
 
-                    <a href="issue1.html" class="text-light-blue underline font-semibold hover:text-navy">
+                    <a href="https://raw.githubusercontent.com/TheEd31/in-the-middle/refs/heads/main/Copy%20of%20ITM%20F25%2025-26%20(1).pdf" class="text-light-blue underline font-semibold hover:text-navy">
                         View Full Issue →
                     </a>
                 </div>
