Article link fix
Now shouldn't download

--- a/archive.html
+++ b/archive.html
@@ -54,7 +54,7 @@
                     <h2 class="text-2xl font-bold text-navy mb-1">Fall 2025 Issue (11/2025)</h2>
                     <p class="text-gray-600 mb-4">Fall Edition (1st Issue) of ITM in the 25-26 year.</p>
 
-                    <a href="https://raw.githubusercontent.com/TheEd31/in-the-middle/refs/heads/main/Copy%20of%20ITM%20F25%2025-26%20(1).pdf" class="text-light-blue underline font-semibold hover:text-navy">
+                    <a href="https://drive.google.com/file/d/1cjfBPSunXfOYk93CLOhfkrnsHFZwVOmZ/preview" class="text-light-blue underline font-semibold hover:text-navy">
                         View Full Issue →
                     </a>
                 </div>
